--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,12 @@ dependencies:
     git:
       url: https://github.com/andreleitejr/levy_dependencies.git
 
-  injectable:
-  flutter_riverpod:
   auto_route:
   auto_route_generator:
+  flutter_riverpod:
+  injectable:
+  json_annotation:
+  shimmer:
 
 dev_dependencies:
   flutter_test:
